--- a/module-admin/src/main/resources/templates/layout/header.html
+++ b/module-admin/src/main/resources/templates/layout/header.html
@@ -7,7 +7,7 @@
                 <a class="mobile-menu" id="mobile-collapse" href="#!">
                     <img class="img-fluid" th:src="@{/files/assets/images/menu_open.png}" alt="Theme-Logo"/>
                 </a>
-                <a href="index.html">
+                <a th:href="@{/admin}">
                     <img class="img-fluid" th:src="@{/files/assets/images/logo.png}" alt="Theme-Logo"/>
                 </a>
                 <a class="mobile-options">
